Bug 333763 - Dolphin crashes due to multiple file selection
Summary: Dolphin crashes due to multiple file selection
Status: RESOLVED FIXED
Alias: None
Product: Baloo
Classification: Unmaintained
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Vishesh Handa
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2014-04-23 10:45 UTC by Ern
Modified: 2014-05-07 12:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ern 2014-04-23 10:45:59 UTC
Application: dolphin (4.13.0)
KDE Platform Version: 4.13.0
Qt Version: 4.8.6
Operating System: Linux 3.13.0-24-generic x86_64
Distribution: Ubuntu 14.04 LTS

-- Information about the crash:
- What I was doing when the application crashed:

Selecting multiple files causes the crash. Easily replicated.

The crash can be reproduced every time.

-- Backtrace:
Application: Dolphin (dolphin), signal: Aborted
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f37da96f800 (LWP 4812))]

Thread 5 (Thread 0x7f37bba6c700 (LWP 4814)):
#0  0x00007f37da2266bd in read () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f37c6ac1e41 in ?? () from /usr/lib/nvidia-331/tls/libnvidia-tls.so.331.38
#2  0x00007f37d11d9c20 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f37d1198b14 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f37d1198f7b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f37d11990ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f37d62987be in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007f37d626a0af in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007f37d626a3a5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007f37d6166c5f in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#10 0x00007f37d624b823 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#11 0x00007f37d616932f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#12 0x00007f37d1678182 in start_thread (arg=0x7f37bba6c700) at pthread_create.c:312
#13 0x00007f37da23530d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 4 (Thread 0x7f37bb1b5700 (LWP 4815)):
#0  0x00007f37d167a558 in __GI___pthread_mutex_lock (mutex=0x7f37ac000a80) at ../nptl/pthread_mutex_lock.c:122
#1  0x00007f37d11da991 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f37d1198a6c in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f37d1198f7b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f37d11990ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f37d62987be in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007f37d626a0af in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007f37d626a3a5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007f37d6166c5f in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007f37d616932f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#10 0x00007f37d1678182 in start_thread (arg=0x7f37bb1b5700) at pthread_create.c:312
#11 0x00007f37da23530d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 3 (Thread 0x7f37ba33c700 (LWP 4816)):
#0  0x00007f37da227fbd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f37d1198fe4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f37d11990ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f37d62987be in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007f37d626a0af in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007f37d626a3a5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007f37d6166c5f in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007f37d624b823 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007f37d616932f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007f37d1678182 in start_thread (arg=0x7f37ba33c700) at pthread_create.c:312
#10 0x00007f37da23530d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 2 (Thread 0x7f37abdcc700 (LWP 9922)):
#0  0x00007f37da227fbd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f37d1198fe4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f37d11990ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f37d62987be in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007f37d626a0af in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007f37d626a3a5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007f37d6166c5f in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007f37d624b823 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007f37d616932f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007f37d1678182 in start_thread (arg=0x7f37abdcc700) at pthread_create.c:312
#10 0x00007f37da23530d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 1 (Thread 0x7f37da96f800 (LWP 4812)):
[KCrash Handler]
#5  0x00007f37da170f79 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#6  0x00007f37da174388 in __GI_abort () at abort.c:89
#7  0x00007f37d5bcf6b5 in __gnu_cxx::__verbose_terminate_handler() () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
#8  0x00007f37d5bcd836 in ?? () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
#9  0x00007f37d5bcd863 in std::terminate() () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
#10 0x00007f37d5bcdaf6 in __cxa_rethrow () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
#11 0x00007f37d626a596 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#12 0x00007f37d626fb79 in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#13 0x00007f37da5504f7 in kdemain () from /usr/lib/kde4/libkdeinit/libkdeinit4_dolphin.so
#14 0x00007f37da15bec5 in __libc_start_main (main=0x4006d0, argc=6, argv=0x7fffcb969478, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fffcb969468) at libc-start.c:287
#15 0x00000000004006fe in _start ()

The reporter indicates this bug may be a duplicate of or related to bug 325445.

Possible duplicates by query: bug 333332, bug 333327, bug 333253, bug 333185, bug 332942.

Reported using DrKonqi
Comment 1 Frank Reininghaus 2014-04-23 14:39:01 UTC
Thanks for the bug report. Could be a duplicate of bug 332403.

Please see

http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports#Retrieving_a_backtrace_when_an_uncaught_exception_is_causing_a_crash

for information about how you can improve your report.
Comment 2 Ern 2014-04-23 15:34:44 UTC
See below for gdb backtrace from uncaught exception.
Looks like it's related to baloo file indexer.
I previously disabled the extremely annoying baloo file indexer by adding $HOME into the exclusion list, as it was constantly using 100% of the CPU.  I also removed the baloo index files as they were taking up a lot of space.
It seems baloo is attempting to read it's database when two files are selected in Dolphin which then causes the crash.


gdb dolphin
GNU gdb (Ubuntu 7.7-0ubuntu3) 7.7
Copyright (C) 2014 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
<http://www.gnu.org/software/gdb/documentation/>.
For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from dolphin...(no debugging symbols found)...done.
(gdb) set logging file ~/gdblog.txt
(gdb) set logging on
Copying output to /home/brad/gdblog.txt.
(gdb) break __cxa_throw
Function "__cxa_throw" not defined.
Make breakpoint pending on future shared library load? (y or [n]) y
Breakpoint 1 (__cxa_throw) pending.
(gdb) break __cxa_rethrow
Function "__cxa_rethrow" not defined.
Make breakpoint pending on future shared library load? (y or [n]) y
Breakpoint 2 (__cxa_rethrow) pending.
(gdb) start
Function "main" not defined.
Make breakpoint pending on future shared library load? (y or [n]) y
Temporary breakpoint 3 (main) pending.
Starting program: /usr/bin/dolphin 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[New Thread 0x7fffd90a2700 (LWP 12114)]
Object::connect: No such signal org::freedesktop::UPower::DeviceAdded(QDBusObjectPath)
Object::connect: No such signal org::freedesktop::UPower::DeviceRemoved(QDBusObjectPath)
[New Thread 0x7fffd3fff700 (LWP 12115)]
[New Thread 0x7fffd37fe700 (LWP 12116)]
Bus::open: Can not get ibus-daemon's address. 
IBusInputContext::createInputContext: no connection to ibus-daemon 
QPixmap::scaled: Pixmap is a null pixmap
[New Thread 0x7fffd231b700 (LWP 12122)]
[New Thread 0x7fffd1b1a700 (LWP 12123)]

Breakpoint 1, 0x00007ffff3203a30 in __cxa_throw () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
(gdb) thread apply all bt

Thread 6 (Thread 0x7fffd1b1a700 (LWP 12123)):
#0  0x00007ffff7862c33 in select () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007ffff387e171 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007ffff379f32f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007fffeecae182 in start_thread (arg=0x7fffd1b1a700) at pthread_create.c:312
#4  0x00007ffff786b30d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 5 (Thread 0x7fffd231b700 (LWP 12122)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:238
#1  0x00007ffff379f7f4 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007ffff37930fa in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007ffff379f32f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007fffeecae182 in start_thread (arg=0x7fffd231b700) at pthread_create.c:312
#5  0x00007ffff786b30d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 4 (Thread 0x7fffd37fe700 (LWP 12116)):
#0  0x00007ffff785dfbd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007fffee7cefe4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fffee7cf0ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ffff38ce7be in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007ffff38a00af in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007ffff38a03a5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007ffff379cc5f in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007ffff3881823 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007ffff379f32f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007fffeecae182 in start_thread (arg=0x7fffd37fe700) at pthread_create.c:312
#10 0x00007ffff786b30d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 3 (Thread 0x7fffd3fff700 (LWP 12115)):
#0  0x00007ffff785dfbd in poll () at ../sysdeps/unix/syscall-template.S:81
---Type <return> to continue, or q <return> to quit---
#1  0x00007fffee7cefe4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fffee7cf0ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ffff38ce7a1 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007ffff38a00af in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007ffff38a03a5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007ffff379cc5f in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007ffff379f32f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007fffeecae182 in start_thread (arg=0x7fffd3fff700) at pthread_create.c:312
#9  0x00007ffff786b30d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 2 (Thread 0x7fffd90a2700 (LWP 12114)):
#0  0x00007ffff785dfbd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007fffee7cefe4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fffee7cf0ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007ffff38ce7be in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007ffff38a00af in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007ffff38a03a5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007ffff379cc5f in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007ffff3881823 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007ffff379f32f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007fffeecae182 in start_thread (arg=0x7fffd90a2700) at pthread_create.c:312
#10 0x00007ffff786b30d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 1 (Thread 0x7ffff7fa3800 (LWP 12110)):
#0  0x00007ffff3203a30 in __cxa_throw () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
#1  0x00007ffff0b367ef in Xapian::Database::Database(std::string const&) () from /usr/lib/libxapian.so.22
#2  0x00007ffff5efd952 in Baloo::FileFetchJob::doStart() () from /usr/lib/libbaloofiles.so.4
#3  0x00007ffff38b9c1e in QObject::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007ffff4293e2c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
---Type <return> to continue, or q <return> to quit---
#5  0x00007ffff429a4a0 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#6  0x00007ffff4f9ebaa in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#7  0x00007ffff38a14dd in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007ffff38a4b3d in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007ffff38cef83 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#10 0x00007fffee7cee04 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#11 0x00007fffee7cf048 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#12 0x00007fffee7cf0ec in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#13 0x00007ffff38ce7a1 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#14 0x00007ffff4335bb6 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#15 0x00007ffff38a00af in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#16 0x00007ffff38a03a5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#17 0x00007ffff38a5b79 in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#18 0x00007ffff7b864f7 in kdemain () from /usr/lib/kde4/libkdeinit/libkdeinit4_dolphin.so
#19 0x00007ffff7791ec5 in __libc_start_main (main=0x4006d0, argc=1, argv=0x7fffffffde88, init=<optimised out>, fini=<optimised out>, 
    rtld_fini=<optimised out>, stack_end=0x7fffffffde78) at libc-start.c:287
#20 0x00000000004006fe in _start ()
Comment 3 Ern 2014-04-23 15:37:10 UTC
added more detailed backtrace
Comment 4 Christoph Feck 2014-04-23 17:45:07 UTC
Wow, thanks! I guess it is the first time I see someone actually using gdb to debug a thrown exception. Indeed it looks like a Baloo problem. Reassigning.
Comment 5 Vishesh Handa 2014-04-25 15:36:17 UTC
@Ern. Thanks for the backtrace. Do you think, you could run it under gdb again and run the following 

$ gdb dolphin
> catch throw
> run

It will throw the exception, print the backtrace.

> continue

And it will then crash. I'd like both the backtrace and the exception name. Thanks!
Comment 6 Ern 2014-04-26 07:52:11 UTC
As requested - see below. Exception is xapian db open error.
Note: I believe the problem is due to manual deletion of the baloo database files as I disabled baloo and then didn't want the large db files wasting hd space.
It seems baloo is being used by dolphin even though baloo is disabled.



gdb dolphin
GNU gdb (Ubuntu 7.7-0ubuntu3) 7.7
Copyright (C) 2014 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
<http://www.gnu.org/software/gdb/documentation/>.
For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from dolphin...(no debugging symbols found)...done.
(gdb) catch throw
Catchpoint 1 (throw)
(gdb) run
Starting program: /usr/bin/dolphin 
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[New Thread 0x7fffd9057700 (LWP 6586)]
Object::connect: No such signal org::freedesktop::UPower::DeviceAdded(QDBusObjectPath)
Object::connect: No such signal org::freedesktop::UPower::DeviceRemoved(QDBusObjectPath)
[New Thread 0x7fffd3fff700 (LWP 6587)]
[New Thread 0x7fffd37fe700 (LWP 6588)]
Bus::open: Can not get ibus-daemon's address. 
IBusInputContext::createInputContext: no connection to ibus-daemon 
QPixmap::scaled: Pixmap is a null pixmap
[New Thread 0x7fffd231b700 (LWP 6590)]
[New Thread 0x7fffd1b1a700 (LWP 6591)]
Catchpoint 1 (exception thrown), 0x00007ffff3203a30 in __cxa_throw () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
(gdb) continue
Continuing.
[Thread 0x7fffd231b700 (LWP 6590) exited]
Qt has caught an exception thrown from an event handler. Throwing
exceptions from an event handler is not supported in Qt. You must
reimplement QApplication::notify() and catch all exceptions there.

terminate called after throwing an instance of 'Xapian::DatabaseOpeningError'

Program received signal SIGABRT, Aborted.
0x00007ffff77a6f79 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
56      ../nptl/sysdeps/unix/sysv/linux/raise.c: No such file or directory.
Comment 7 Ern 2014-04-26 07:53:25 UTC
Note: I found a workaround for the error by re-enabling baloo which allowed it to start rebuilding the db, and then I disabled it again.
Comment 8 Frank Reininghaus 2014-05-03 07:51:33 UTC
Git commit 59519f5b7f69d3c661379765b4928355cd2e047d by Frank Reininghaus.
Committed on 03/05/2014 at 07:46.
Pushed by freininghaus into branch 'KDE/4.13'.

Catch more exceptions in Baloo::FileFetchJob::doStart()

This prevents a crash if the Xapian database setup fails.
REVIEW: 117930
FIXED-IN: 4.13.1

M  +4    -1    src/file/lib/filefetchjob.cpp

http://commits.kde.org/baloo/59519f5b7f69d3c661379765b4928355cd2e047d
Comment 9 fracrescenzi 2014-05-07 12:51:57 UTC
i confirm, it is a baloo problem, i have activate and re-deactivate baloo, and it's all ok!