Catch more exceptions in Baloo::FileFetchJob::doStart()

This prevents a crash if the Xapian database setup fails.

BUG: 333763
REVIEW: 117930
FIXED-IN: 4.13.1